<resources>
    <string name="app_name">BEEAH</string>
    <string name="h1_d1">Types: Non-recyclable household waste, such as food scraps, packaging materials, and non-recyclable plastics.\nDisposal Method: Typically collected by municipal waste management services and sent to landfill sites or waste-to-energy facilities. Users should be encouraged to minimize general waste and prioritize recycling and composting</string>
    <string name="h2_d1">"Types: Materials that can be recycled, including paper, cardboard, glass, metal cans, and certain types of plastics.\nDisposal Method: Encourage users to separate recyclable materials from general waste and place them in designated recycling bins or take them to recycling centers. Provide information on local recycling programs and collection schedules."</string>
    <string name="h3_d1">Types: Biodegradable waste such as food scraps, yard trimmings, and plant-based materials.\nDisposal Method: Promote composting as a sustainable way to manage organic waste. Users can compost at home using compost bins or participate in community composting programs. Alternatively, organic waste can be collected separately and processed at industrial composting facilities</string>
    <string name="h4_d1">Types: Potentially harmful materials such as batteries, electronics, chemicals, paints, and fluorescent light bulbs.\nDisposal Method: Advise users to handle hazardous waste with caution and not to dispose of it with regular household waste. Provide information on local hazardous waste collection events or drop-off locations where users can safely dispose of these materials. Emphasize the importance of proper disposal to prevent environmental contamination</string>
    <string name="h5_d1">Types: Discarded electronic devices and components, including computers, smartphones, televisions, and appliances.\nDisposal Method: Recommend recycling e-waste to recover valuable materials and reduce environmental impact. Users can take their old electronic devices to designated e-waste recycling centers or participate in manufacturer take-back programs</string>
    <string name="h6_d1">Types: Large items such as furniture, mattresses, appliances, and electronic equipment.\nDisposal Method: Provide information on how users can dispose of bulky waste items responsibly. This may involve scheduling a special pickup with waste management services, donating usable items to charity, or arranging for private disposal services</string>
    <string name="h7_d1">Types: Debris generated from construction, renovation, and demolition projects, including concrete, wood, bricks, and drywall.\nDisposal Method: Recommend proper sorting and disposal of construction waste to minimize environmental impact. Users should separate recyclable materials from mixed construction waste and dispose of them at appropriate facilities such as construction waste recycling centers or landfills with specific disposal areas for these materials</string>
</resources>