<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ViewWasteGuidance">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Types of Waste and Disposal Methods"
                android:textColor="@color/txt"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="General waste (Residual waste)"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h1_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recyclable Waste"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h2_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Organic Waste"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h3_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hazardous Waste"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h4_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Electronic Waste (E-waste)"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h5_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bulky Waste"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h6_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Construction and Demolition waste"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h7_d1"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>